--- a/html1.html
+++ b/html1.html
@@ -5,15 +5,15 @@
 </head>
 <body>
 
-<p>HTML son las siglas de HyperText Markup Language, que puede traducirse como lenguaje de marcas o marcado de hipertexto.
+<p><b>HTML</b> son las siglas de HyperText Markup Language, que puede traducirse como lenguaje de marcas o marcado de hipertexto.
 </p>
 
-<p>El lenguaje HTML se emplea para crear las páginas web. Es muy fácil ver el código HTML de una página web, la opción exacta cambia de un navegador a otro y también puede cambiar de una versión a otra de un mismo navegador, pero suelen tener un nombre similar.
+<p>El lenguaje <b>HTML</b> se emplea para crear las páginas web. Es muy fácil ver el código HTML de una página web, la opción exacta cambia de un navegador a otro y también puede cambiar de una versión a otra de un mismo navegador, pero suelen tener un nombre similar.
 </p>
 
-<p>HTML se compone de etiquetas que se escriben entre los símbolos menor que y mayor que.</p>
+<p><b>HTML</b> se compone de etiquetas que se escriben entre los símbolos menor que y mayor que.</p>
 
-<p>Los inicios del lenguaje HTML se remontan al año 1990, cuando Tim Berners-Lee creó la primera página web.</p>
+<p>Los inicios del lenguaje <b>HTML</b> se remontan al año 1990, cuando Tim Berners-Lee creó la primera página web.</p>
 
 </body>
 </html>
